--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ h2 {
     font-size: 35px;
     text-align: center;
     color: #fff;
-    animation: glow 1s ease-in-out infinite alternate;
+    
 }
 
 #button-game{
@@ -40,12 +40,10 @@ h2 {
 }
 
 .button {
-    width: 350px;
-    height: 120px;
+    width: 290px;
+    height: 180px;
     border: none;
     outline: none;
-    color: #fff;
-    background: rgb(104, 102, 102);
     cursor: pointer;
     position: relative;
     z-index: 0;
@@ -56,42 +54,38 @@ h2 {
     font-size: 16px;
     transition-duration: 0.4s;
     cursor: pointer;
-    margin-top: 5%;
-    border: 2px solid black;
-}
-
-    .button:hover {
-        border:2px solid rgb(104, 102, 102) ;
-        background:white;
-        color:black;
+    margin: 2%;
     }
 
-    .butty{
-            width: 400px;
-            height: 120px;
-            border: none;
-            outline: none;
-            color: #fff;
-            background: blue;
-            cursor: pointer;
-            position: relative;
-            z-index: 0;
-            border-radius: 10px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            transition-duration: 0.4s;
-            cursor: pointer;
-            margin-top: 5%;
-            border: 2px solid black;
-        }
+    .button:hover {
+        transform: scale(1.1);
+    }
 
-        .butty:hover{
-               transform: scale(1.1);
-               box-shadow:  3px 5px 6px #ccc;
-                
-            }
+                  
+
+      #info{
+        font-size: 35px;
+         text-align: center;
+        color:green;
+        animation: glow 1s ease-in-out infinite alternate;
+      }
+
+      #losing{
+        font-size: 35px;
+         text-align: center;
+        color: red;
+        animation: glow 1s ease-in-out infinite alternate;
+      }
+
+      #draw{
+        font-size: 35px;
+         text-align: center;
+        color: yellow;
+        animation: glow 1s ease-in-out infinite alternate;
+      }
+
+
+
         
     
        
